--- a/hubjuegos/hubjuegos/style.css
+++ b/hubjuegos/hubjuegos/style.css
@@ -1,10 +1,13 @@
-/* style.css*/
-
+:root{
+  --color:rgb(255, 255, 255);
+  
+}
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
   font-family: "Roboto", sans-serif;
+  color:var(--color);
 
   & main {
     padding-top: 20vh;
